# zed

./: .gitignore  Cargo.toml  INTEGRATION.md  LICENSE  MIGRATION-ANALYSIS.md  README.md
crates/gpui_web/examples/hello_web/: Cargo.toml
crates/grammars/: Cargo.toml
crates/grammars/src/go/: runnables.scm
crates/language_core/: Cargo.toml
crates/languages/src/: go.rs  lib.rs
crates/spectral_analysis/: Cargo.toml  INTEGRATION.md
crates/spectral_analysis/src/: spectral_analysis.rs
docs/: FUTURE-INTEGRATION.md
extensions/spectral_analysis/: Cargo.toml  extension.toml
extensions/spectral_analysis/src/: spectral_analysis_extension.rs
spatial/: .gitignore  Cargo.toml  README.md
spatial/src/: code_graph.rs  lib.rs  report.rs  snap_navigation.rs  spatial_analysis.rs
