[package]
name = "spatial"
version = "0.1.0"
edition = "2021"
description = "Eisenstein spatial intelligence module for the zed editor fork"

[lib]
name = "spatial"
path = "src/lib.rs"

[dependencies]
eisenstein = { version = "0.3", features = ["snap"] }
snapkit = "0.1"
nalgebra = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
