[package]
name = "spectral_analysis"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"


[lints]
workspace = true

[lib]
path = "src/spectral_analysis.rs"
doctest = false

[dependencies]
cathedral-probe = "0.1"
serde.workspace = true
serde_json.workspace = true
anyhow = "1.0"
